invite endpoints
