# apps/jan-api-gateway/application/app/interfaces/http/routes/v1/organization/organization_route.go
@@ -3,19 +3,22 @@ package organization
 import (
 	"github.com/gin-gonic/gin"
 	"menlo.ai/jan-api-gateway/app/domain/auth"
+	"menlo.ai/jan-api-gateway/app/interfaces/http/routes/v1/organization/invites"
 	"menlo.ai/jan-api-gateway/app/interfaces/http/routes/v1/organization/projects"
 )
 
 type OrganizationRoute struct {
 	adminApiKeyAPI *AdminApiKeyAPI
 	projectsRoute  *projects.ProjectsRoute
+	inviteRoute    *invites.InvitesRoute
 	authService    *auth.AuthService
 }
 
-func NewOrganizationRoute(adminApiKeyAPI *AdminApiKeyAPI, projectsRoute *projects.ProjectsRoute, authService *auth.AuthService) *OrganizationRoute {
+func NewOrganizationRoute(adminApiKeyAPI *AdminApiKeyAPI, projectsRoute *projects.ProjectsRoute, inviteRoute *invites.InvitesRoute, authService *auth.AuthService) *OrganizationRoute {
 	return &OrganizationRoute{
 		adminApiKeyAPI,
 		projectsRoute,
+		inviteRoute,
 		authService,
 	}
 }
@@ -26,7 +29,7 @@ func (organizationRoute *OrganizationRoute) RegisterRouter(router gin.IRouter) {
 		organizationRoute.authService.RegisteredUserMiddleware(),
 		organizationRoute.authService.RegisteredOrganizationMiddleware(),
 	)
-	// TODO: Access via admin key instead of API key.
 	organizationRoute.adminApiKeyAPI.RegisterRouter(organizationRouter)
 	organizationRoute.projectsRoute.RegisterRouter(organizationRouter)
+	organizationRoute.inviteRoute.RegisterRouter(organizationRouter)
 }
